fix spacing

--- a/src/components/HomePage/Gallery/styled.module.scss
+++ b/src/components/HomePage/Gallery/styled.module.scss
@@ -1,6 +1,19 @@
 @import "../../../scss/_layout-mixins";
 
 .Gallery {
+    margin-top: 110px;
+
+    @include mobile {
+        margin-top: 70px;
+    }
+
+    @media screen and (max-width: 991px) {
+        max-width: 600px;
+        margin: 40px auto;
+    }
+    @media screen and (max-width: 600px) {
+        margin-top: 0px;
+    }
 }
 
 .CTA {
